--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,69 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.animate-fade-in {
+  animation: fade-in 3s ease-in-out forwards;
+}
+
+.animate-fade-left {
+  animation: fade-left 3s ease-in-out forwards;
+}
+.animate-title{
+  animation: title 3s ease-out forwards;
+}
+
+.text-transparent {
+  color: transparent;
+}
+.font-display {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@keyframes title {
+  0% {
+    line-height: 0%;
+    letter-spacing: .25em;
+    opacity: 0;
+}
+
+25% {
+    line-height: 0%;
+    opacity: 0;
+}
+80% {
+    opacity: 100%;
+}
+100% {
+    line-height: 100%;
+    opacity: 100%;
+}
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+}
+
+75% {
+    opacity: 0;
+}
+100% {
+    opacity: 100%;
+}
+}
+
+@keyframes fade-left {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+}
+
+30% {
+    transform: translateX(0);
+    opacity: 100%;
+}
+100% {
+    opacity: 0;
+}
+}
